Fixed spacing on contact form. Also added comments to style sheets.

--- a/styles2.css
+++ b/styles2.css
@@ -1,3 +1,5 @@
+/* Basic Styles */
+
 .main-content {
   width: 60%;
   margin: 0 auto;
@@ -6,7 +8,7 @@
 img {
   display: block;
   margin-left: auto;
-  margin-right: 40px;
+  margin-right: 28px;
   width: 50%;
   padding-top: 55px;
   float: left;
