--- a/styles3.css
+++ b/styles3.css
@@ -6,7 +6,7 @@
 img {
   display: block;
   margin-left: auto;
-  margin-right: 40px;
+  margin-right: 30px;
   width: 50%;
   padding-top: 55px;
   padding-left: 35px;
